# aoc

./: .gitignore  Cargo.toml  new.sh
2020/: Cargo.toml
2020/d1/: main.rs
2020/d2/: main.rs
2020/d3/: main.rs
2020/d4/: main.rs
2020/d5/: main.rs
2020/d6/: main.rs
2021/: Cargo.toml
2021/d10/: main.rs
2021/d11/: main.rs
2021/d12/: main.rs
2021/d13/: main.rs
2021/d14/: main.rs
2021/d15/: main.rs
2021/d16/: main.rs
2021/d17/: main.rs
2021/d18/: main.rs
2021/d19/: main.rs
2021/d20/: main.rs
2021/d21/: main.rs
2021/d22/: main.rs
2021/d3/: main.rs
2021/d4/: main.rs
2021/d5/: main.rs
2021/d6/: main.rs
2021/d7/: main.rs
2021/d8/: main.rs
2021/d9/: main.rs
2022/: Cargo.toml
2022/d1/: main.rs
2022/d10/: main.rs
2022/d11/: main.rs
2022/d12/: main.rs
2022/d13/: main.rs
2022/d14/: main.rs
2022/d15/: main.rs
2022/d16/: main.rs
2022/d2/: main.rs
2022/d3/: main.rs
2022/d4/: main.rs
2022/d5/: main.rs
2022/d6/: main.rs
2022/d7/: example.repeat.txt  main.rs
2022/d8/: main.rs
2022/d9/: main.rs
2023/: Cargo.toml
2023/d1/: main.rs
2023/d10/: main.rs
2023/d11/: main.rs
2023/d12/: main.rs
2023/d13/: main.rs
2023/d14/: main.rs
2023/d15/: main.rs
2023/d16/: main.rs
2023/d17/: main.rs
2023/d18/: main.rs
2023/d19/: main.rs
2023/d2/: main.rs
2023/d20/: main.rs
2023/d21/: main.rs
2023/d22/: main.rs
2023/d3/: main.rs
2023/d4/: main.rs
2023/d5/: main.rs
2023/d6/: main.rs
2023/d7/: main.rs
2023/d8/: main.rs
2023/d9/: main.rs
2024/: Cargo.toml
2024/d1/: main.rs
2024/d10/: main.rs
2024/d11/: main.rs
2024/d12/: main.rs
2024/d13/: main.rs
2024/d14/: main.rs
2024/d15/: input.sum.txt  main.rs
2024/d16/: main.rs
2024/d17/: main.rs
2024/d18/: main.rs
2024/d19/: main.rs
2024/d2/: main.rs
2024/d20/: main.rs
2024/d21/: input.test copy.txt  main.rs
2024/d22/: main.rs
2024/d23/: main.rs
2024/d24/: main.rs
2024/d25/: main.rs
2024/d3/: main.rs
2024/d4/: main.rs
2024/d5/: main.rs
2024/d6/: main.rs
2024/d7/: main.rs
2024/d8/: main.rs  out.txt
2024/d9/: main.rs
2025/: Cargo.toml
2025/d1/: main.rs
2025/d10/: main.rs
2025/d11/: main.rs
2025/d12/: main.rs
2025/d2/: main.rs
2025/d3/: main.rs
2025/d4/: main.rs
2025/d5/: main.rs
2025/d6/: main.rs
2025/d7/: main.rs
2025/d8/: main.rs
2025/d9/: main.rs  tmp.txt  tmp2.txt
d11/: main.rs
d12/: main.rs
d13/: main.rs
d14/: main.rs
d15/: main.rs
d16/: main.rs
d17/: main.rs
d18/: main.rs
d19/: main.rs
d20/: input.test2.txt  main.rs
d21/: main.rs
d22/: main.rs
d3/: main.rs
d4/: main.rs
d5/: main.rs
d8/: main.rs
d9/: main.rs
lib/: Cargo.toml
lib/src/: astar.rs  cartesian.rs  distance.rs  grid.rs  input.rs  lib.rs  neighbour.rs  number.rs  range.rs  shortest_path.rs  timing.rs
src/: main.rs
