[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "d3"
path = "d3/main.rs"

[[bin]]
name = "d4"
path = "d4/main.rs"

[[bin]]
name = "d5"
path = "d5/main.rs"

[[bin]]
name = "d6"
path = "d6/main.rs"

[[bin]]
name = "d7"
path = "d7/main.rs"

[[bin]]
name = "d8"
path = "d8/main.rs"

[[bin]]
name = "d9"
path = "d9/main.rs"

[[bin]]
name = "d10"
path = "d10/main.rs"

[[bin]]
name = "d11"
path = "d11/main.rs"