[package]
name = "aoc2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
aoclib = {path = "../lib"}

[[bin]]
name = "d1"
path = "d1/main.rs"

[[bin]]
name = "d2"
path = "d2/main.rs"

[[bin]]
name = "d3"
path = "d3/main.rs"

[[bin]]
name = "d4"
path = "d4/main.rs"

[[bin]]
name = "d5"
path = "d5/main.rs"