[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[[bin]]
name = "d3"
path = "d3/main.rs"

[[bin]]
name = "d4"
path = "d4/main.rs"

[[bin]]
name = "d5"
path = "d5/main.rs"

[[bin]]
name = "d6"
path = "d6/main.rs"

[[bin]]
name = "d7"
path = "d7/main.rs"

[[bin]]
name = "d8"
path = "d8/main.rs"

[[bin]]
name = "d9"
path = "d9/main.rs"

[[bin]]
name = "d10"
path = "d10/main.rs"

[[bin]]
name = "d11"
path = "d11/main.rs"

[[bin]]
name = "d12"
path = "d12/main.rs"

[[bin]]
name = "d13"
path = "d13/main.rs"

[[bin]]
name = "d14"
path = "d14/main.rs"

[[bin]]
name = "d15"
path = "d15/main.rs"

[[bin]]
name = "d16"
path = "d16/main.rs"

[[bin]]
name = "d17"
path = "d17/main.rs"

[[bin]]
name = "d18"
path = "d18/main.rs"

[[bin]]
name = "d19"
path = "d19/main.rs"

[[bin]]
name = "d20"
path = "d20/main.rs"

[[bin]]
name = "d21"
path = "d21/main.rs"

[[bin]]
name = "d22"
path = "d22/main.rs"