[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
rayon = "1.6.1"
regex = "1.10.2"
aoclib = {path = "../lib"}

[[bin]]
name = "d1"
path = "d1/main.rs"

[[bin]]
name = "d2"
path = "d2/main.rs"

[[bin]]
name = "d3"
path = "d3/main.rs"

[[bin]]
name = "d4"
path = "d4/main.rs"

[[bin]]
name = "d5"
path = "d5/main.rs"

[[bin]]
name = "d6"
path = "d6/main.rs"