[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
rayon = "1.6.1"
regex = "1.10.2"
aoclib = {path = "../lib"}

[[bin]]
name = "d1"
path = "d1/main.rs"

[[bin]]
name = "d2"
path = "d2/main.rs"

[[bin]]
name = "d3"
path = "d3/main.rs"

[[bin]]
name = "d4"
path = "d4/main.rs"

[[bin]]
name = "d5"
path = "d5/main.rs"

[[bin]]
name = "d6"
path = "d6/main.rs"

[[bin]]
name = "d7"
path = "d7/main.rs"

[[bin]]
name = "d8"
path = "d8/main.rs"

[[bin]]
name = "d9"
path = "d9/main.rs"

[[bin]]
name = "d10"
path = "d10/main.rs"

[[bin]]
name = "d11"
path = "d11/main.rs"

[[bin]]
name = "d12"
path = "d12/main.rs"

[[bin]]
name = "d13"
path = "d13/main.rs"