[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.10.5"
regex = "1.10.2"
aoclib = {path = "../lib"}
hashbrown = { version = "0.15.2", features = ["rayon"] }

[[bin]]
name = "d1"
path = "d1/main.rs"


[[bin]]
name = "d2"
path = "d2/main.rs"


[[bin]]
name = "d3"
path = "d3/main.rs"
