[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.10.5"
regex = "1.10.2"
aoclib = {path = "../lib"}
hashbrown = { version = "0.15.2", features = ["rayon"] }
rayon = "1.11.0"

[[bin]]
name = "d1"
path = "d1/main.rs"


[[bin]]
name = "d2"
path = "d2/main.rs"


[[bin]]
name = "d3"
path = "d3/main.rs"


[[bin]]
name = "d4"
path = "d4/main.rs"


[[bin]]
name = "d5"
path = "d5/main.rs"


[[bin]]
name = "d6"
path = "d6/main.rs"


[[bin]]
name = "d7"
path = "d7/main.rs"


[[bin]]
name = "d8"
path = "d8/main.rs"


[[bin]]
name = "d9"
path = "d9/main.rs"
